Fixed padding for collapsed header.

--- a/less/main.less
+++ b/less/main.less
@@ -202,6 +202,7 @@ h1, h2, h3, h4, h5, h6 {
 		}
     }
     .navbar-default.navbar-shrink {
+        .navbar-brand { padding: 5px 0 0 0; }
     	background-color: @gray-lighter;
         .drop-shadow(99);
         padding: 10px 0;
